--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.nantaaditya</groupId>
-  <artifactId>admin</artifactId>
+  <artifactId>nanta-aditya-admin</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
 
