add log and change context path

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,5 +6,9 @@ server.servlet.jsp.init-parameters.development: true
 # SPRING BOOT
 server.compression.enabled=true
 spring.resources.cache-period=3600
-server.servlet.context-path=/admin
+server.servlet.context-path=/nanta-aditya-admin
+logging.level.root=WARNING
+logging.level.com.nantaaditya.*=WARNING
+logging.file.max-size=5MB
+logging.file=/opt/tomcat/logs/application-nanta-aditya-admin.log
 
