--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,7 +8,6 @@ server.compression.enabled=true
 spring.resources.cache-period=3600
 server.servlet.context-path=/nanta-aditya-admin
 logging.level.root=WARNING
-logging.level.com.nantaaditya.*=WARNING
+logging.level.com.nantaaditya.admin=WARNING
 logging.file.max-size=5MB
 logging.file=/opt/tomcat/logs/application-nanta-aditya-admin.log
-
